--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     compile 'com.unstoppable:submitbutton:1.1.2'
+    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
 }
