--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "org.scau.mimi"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -20,11 +20,22 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.joaquimley:faboptions:1.1.2'
+    compile 'com.android.support:percent:25.0.0'
+    compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.android.support:design:25.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'q.rorbin:badgeview:1.1.2'
+    compile 'com.github.Yalantis:OfficialFoldingTabBar.Android:v0.9'
+    compile 'com.jaeger.statusbarutil:library:1.4.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
+    compile 'com.sackcentury:shinebutton:0.1.9'
+    compile 'top.wuhaojie:scrollnumber:1.0.0'
 }
