--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.jaeger.statusbarutil:library:1.4.0'
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.sackcentury:shinebutton:0.1.9'
+    compile 'org.zackratos:ultimatebar:1.0.3'
 }
