--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,15 +31,15 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     compile 'com.unstoppable:submitbutton:1.1.2'
-    compile 'com.github.joaquimley:faboptions:1.1.2'
     compile 'com.android.support:percent:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:design:25.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'q.rorbin:badgeview:1.1.2'
     compile 'com.github.Yalantis:OfficialFoldingTabBar.Android:v0.9'
-    compile 'com.jaeger.statusbarutil:library:1.4.0'
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.sackcentury:shinebutton:0.1.9'
     compile 'org.zackratos:ultimatebar:1.0.3'
+    compile 'com.lcodecorex:tkrefreshlayout:1.0.7'
+    compile 'com.github.SumiMakito:AdvancedTextSwitcher:0.3'
 }
