--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     compile 'com.unstoppable:submitbutton:1.1.2'
-    compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:design:25.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'q.rorbin:badgeview:1.1.2'
@@ -43,4 +42,9 @@ dependencies {
     compile 'com.github.SumiMakito:AdvancedTextSwitcher:0.3'
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'org.litepal.android:core:1.6.0'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.android.support:support-v4:25.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    compile 'com.google.code.gson:gson:2.8.1'
 }
