--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:percent:25.0.0'
+    compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:percent:25.0.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     compile 'com.unstoppable:submitbutton:1.1.2'
@@ -40,11 +39,18 @@ dependencies {
     compile 'org.zackratos:ultimatebar:1.0.3'
     compile 'com.lcodecorex:tkrefreshlayout:1.0.7'
     compile 'com.github.SumiMakito:AdvancedTextSwitcher:0.3'
-    testCompile 'junit:junit:4.12'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'org.litepal.android:core:1.6.0'
-    compile 'com.github.bumptech.glide:glide:4.0.0'
-    compile 'com.android.support:support-v4:25.3.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
+    testCompile 'junit:junit:4.12'
+    compile 'com.zhihu.android:matisse:0.4.3'
+
+    compile 'com.github.bumptech.glide:glide:3.6.0'
+    compile 'com.android.support:support-v4:25.3.1'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+
+//    compile 'com.github.bumptech.glide:glide:3.8.0'
+
+//    compile 'com.github.bumptech.glide:okhttp3-integration:4.0.0-RC1'
 }
