--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
-        android:name="org.litepal.LitePalApplication"
+        android:name="org.scau.mimi.other.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -55,6 +55,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
 
+
+        </activity>
+
+        <activity android:name=".activity.PictureActivity">
 
         </activity>
 
