--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,7 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.android.support:support-v4:25.3.1'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
 
-//    compile 'com.github.bumptech.glide:glide:3.8.0'
-
-//    compile 'com.github.bumptech.glide:okhttp3-integration:4.0.0-RC1'
+    compile 'com.github.Hitomis.transferee:Transferee:v1.0.0'
+    compile 'com.github.Hitomis.transferee:GlideLoader:v1.0.0'
 }
