--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,9 @@
 
         </activity>
 
-        <activity android:name=".activity.PictureActivity">
+        <activity android:name=".activity.PictureActivity"
+            android:theme="@style/TransitionTheme"
+            >
 
         </activity>
 
