--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
 
         <activity
             android:name=".activity.LoginActivity"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+            android:screenOrientation="portrait"
+            >
 
             <!--<intent-filter>-->
 
@@ -29,24 +30,8 @@
         </activity>
 
         <activity
-            android:name=".activity.MainActivity">
-
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN"/>-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
-            <!--</intent-filter>-->
-
-
-        </activity>
-
-        <activity
-            android:name=".activity.SignUpActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-        </activity>
-
-        <activity android:name=".activity.SendMomentActivity"
-                  android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:name=".activity.MainActivity"
+            android:screenOrientation="portrait"
             >
 
             <intent-filter>
@@ -58,8 +43,33 @@
 
         </activity>
 
-        <activity android:name=".activity.PictureActivity"
+        <activity
+            android:name=".activity.SignUpActivity"
+            android:screenOrientation="portrait"
+            >
+
+
+        </activity>
+
+        <activity
+            android:name=".activity.SendMomentActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            >
+
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN"/>-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--</intent-filter>-->
+
+
+        </activity>
+
+        <activity
+            android:name=".activity.PictureActivity"
             android:theme="@style/TransitionTheme"
+            android:screenOrientation="portrait"
             >
 
         </activity>
