--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,11 +34,11 @@
             android:screenOrientation="portrait"
             >
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN"/>-->
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--</intent-filter>-->
 
 
         </activity>
@@ -71,6 +71,19 @@
             android:theme="@style/TransitionTheme"
             android:screenOrientation="portrait"
             >
+
+        </activity>
+
+        <activity
+            android:name=".activity.CommentActivity"
+            android:screenOrientation="portrait"
+            >
+
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN"/>
+
+            <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
 
         </activity>
 
