--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
 
     compile 'com.github.Hitomis.transferee:Transferee:v1.0.0'
     compile 'com.github.Hitomis.transferee:GlideLoader:v1.0.0'
+
+    compile 'org.java-websocket:Java-WebSocket:1.3.0'
+    compile 'com.github.NaikSoftware:StompProtocolAndroid:1.1.1'
 }
